# wgpu-lenia

./: Cargo.toml  Makefile
src/: computer.rs  event_loop.rs  game-of-life.render.wgsl  lib.rs  main.rs  rules.rs
