[package]
name = "wgpu-lenia"
version = "0.1.0"
edition = "2021"
description = "Wgpu game of life"
license = "MIT"
repository = "https://github.com/roku36/wgpu-lenia"
keywords = ["wgpu", "webgpu", "wgsl"]
categories = ["graphics"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]


[dependencies]
bytemuck = { version = "*" }
log = "*"
instant = { version = "*", features = ["wasm-bindgen"] }
pollster = "*"
rand = "*"
rand_chacha = "*"
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
winit = { git = "https://github.com/rust-windowing/winit/", features = [
    "android-native-activity",
    "rwh_06",
    "wayland",
    "wayland-dlopen",
], default-features = false }

[dev-dependencies]
criterion = { version = "*", default-features = false, features = [] }

[package.metadata.bundle]
name = "Game of Life"
identifier = "net.fornwall.wgpugameoflife"
version = "0.1.0"
resources = ["assets", "images/**/*.png"]
copyright = "Copyright (c) Fredrik Fornwall 2023. All rights reserved."
category = "Developer Tool"
short_description = "An example wgpu application."
long_description = """
An example wgpu application running game of life.
Se https://github.com/fornwall/wgpu-game-of-life.
"""

